# LabAutomationKits

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json  postCreate.sh
API/SimplePump/: action_models.py  driver.py  find_port.py  main.py  requirements.txt
API/SimplePumpBackground/: requirements.txt
BayesianOpt/: bayesianOpt.py  customCallbacks.py  evaluateFitness.py  requirements.txt
Electronics/Firmware/CommandExample/lib/CmdMessenger/: CmdMessenger.h
Electronics/Firmware/CommandExample/src/: driver.py  find_port.py  main.cpp
Electronics/Firmware/PumpExample/: platformio.ini
Electronics/Firmware/PumpExample/lib/DF4MotorDriver/: df4MotorDriver.cpp
Electronics/Firmware/PumpExample/src/: main.cpp
Electronics/Firmware/StepExample/: requirements.txt
Electronics/Firmware/StepExample/src/: driver.py  main.cpp
Electronics/KitElectronics/: KitElectronics.kicad_prl  KitElectronics.kicad_pro  KitElectronics.kicad_sch  LabAutomationKits.bak  LabAutomationKits.kicad_sym  sym-lib-table  ~KitElectronics.kicad_sch.lck
ros2_ws/src/lab_automation_pump/: MIGRATION_PLAN.md  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/lab_automation_pump/lab_automation_pump/: client.py  driver.py  find_port.py  node.py
ros2_ws/src/lab_automation_pump/launch/: pump.launch.py
ros2_ws/src/lab_automation_pump_interfaces/: CMakeLists.txt  README.md  package.xml  requirements.txt
ros2_ws/src/lab_automation_pump_interfaces/action/: PumpStep.action
ros2_ws/src/lab_automation_pump_interfaces/msg/: PumpState.msg
(+5 files in other folders)
