<?xml version="1.0"?>
<package format="3">
  <name>lab_automation_pump_interfaces</name>
  <version>0.1.0</version>
  <description>Interfaces (actions, messages) for lab automation pump control.</description>
  <maintainer email="lori@itu.dk">Alejandro Lorite Mora</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>builtin_interfaces</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
